#283 - OrderGroupType entfernt, Methoden und Tests angepasst